<resources>
    <string name="app_name">"Cricket Score Board "</string>
    <string name="load_button">Enter</string>
    <string name="load_content">Cricket Score\nBoard</string>
    <string name="string_App_font">monospace</string>
    <string name="team_details_string">Team Details</string>
    <string name="player_details_string">Player Details</string>
    <string name="ground_details_string">Ground Details</string>
    <string name="schedule_match_string">Schedule Matches</string>
    <string name="set_rules_string">Set Rules</string>
    <string name="viewMatchSummary_string">Match Summary</string>
    <string name="start_match_string">Start Match</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="city_prompt">Choose a country</string>
</resources>